<resources>
    <string name="app_name">InstaHappy</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_a_category">Select a category</string>
    <string name="kids">Kids</string>
    <string name="pets">Pets</string>
    <string name="nature">Nature</string>
    <string name="love">Love</string>
    <string name="notification_title">Oops, sorry!</string>
    <string name="notification_message">An error occurred. Please try again.</string>
    <string name="close_dialog_title">Close</string>
    <string name="error_msg">Sorry, could not display photos. /n The server took too long to respond.</string>
    <string name="error_msg_no_internet">No internet</string>
    <string name="error_msg_timeout">Took to long to respond.</string>
    <string name="error_msg_unknown">An unknown error occurred.</string>
    <string name="retry">Retry</string>
    <string name="photo_image">photo image</string>
    <string name="by_author">By author</string>
    <string name="photo_credit"> By %1s on Unsplash</string>
    <string name="error_title">purchase app</string>
    <string name="error_message">need to purchase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="server_client_id">747970262562&#8211;6mbhvab1tsk0cvkk6a2envl9siuie0q5.apps.googleusercontent.com</string>
    <string name="welcome_user_msg">Welcome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or_connect_with">Or connect with</string>
    <string name="forgot_password">forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="make_me_happy">Make me happy</string>
    <string name="reset_password">Reset Password</string>
    <string name="home">Home</string>
    <string name="my_collection">My Collection</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="please_upgrade">Please Upgrade</string>
    <string name="create_account">Create an account</string>
    <string name="menu_icon">menu icon</string>
    <string name="reset">Reset</string>
    <string name="reset_instructions">Enter your email and we will send you a link to reset your password.</string>
    <string name="enter_picture_name">Enter picture name</string>
    <string name="upload_icon">image of personalPhoto icon</string>
    <string name="communicate">communicate</string>
    <string name="verify_email">Verify email</string>
    <string name="action_home">Home</string>
    <string name="error_uploading">Could not upload, sorry!</string>
    <string name="no_file_selected">No File selected</string>
    <string name="cd_selected_image">selected image preview</string>
    <string name="cd_button_to_choose_img">Choose image button</string>
    <string name="cd_upload_status_tv">status of photo upload</string>
    <string name="choose_file">Choose file</string>
    <string name="upload_complete">Upload Complete!</string>
    <string name="select_photo_category">Select photo category</string>
    <string name="signed_out">Signed out</string>
    <string name="share_msg_text">You should check out the InstaHappy app for a cute photo to pick you up when you\'re down, just search for it in the Google Play Store.</string>
    <string name="share_subject_text">Re: InstaHappy App</string>
    <string name="no_photos_tv">No photos...yet!</string>
    <string name="no_photos_yet">No photos..yet!</string>
</resources>
